# ArcNotes

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .codespell-ignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: linux-ci.yml  windows-ci.yml
cmake/: copy_qt_platforms.cmake  sync_qmlls_ini.cmake
packaging/linux/: package.sh
packaging/windows/: Notes_Inno_Script_Github.iss
snap/: snapcraft.yaml
src/: aboutwindow.cpp  aboutwindow.h  allnotebuttontreedelegateeditor.cpp  allnotebuttontreedelegateeditor.h  appbackend.cpp  appbackend.h  customDocument.h  customMarkdownHighlighter.cpp  customMarkdownHighlighter.h  customapplicationstyle.cpp  customapplicationstyle.h  customdocument.cpp  custommarkdownhighlighter.cpp  custommarkdownhighlighter.h  dbmanager.cpp  dbmanager.h  defaultnotefolderdelegateeditor.cpp  defaultnotefolderdelegateeditor.h  editorsettingsoptions.cpp  editorsettingsoptions.h  elidedlabel.cpp  elidedlabel.h  foldertreedelegateeditor.cpp  foldertreedelegateeditor.h  fontloader.h  framelesswindow.cpp  framelesswindow.h  framelesswindow.mm  labeledittype.cpp  labeledittype.h  listviewlogic.cpp  listviewlogic.h  lqtutils_enum.h  main.cpp  mainwindow.cpp  mainwindow.h  markdownhighlighter.cpp  nodedata.cpp  nodedata.h  nodepath.cpp  (+56 more)
src/qml/: AboutDialog.qml  CustomHorizontalScrollBar.qml  CustomTextArea.qml  CustomTextField.qml  CustomVerticalScrollBar.qml  EditorSettings.qml  FontChooserButton.qml  FontIconsCodes.qml  KanbanBoard.qml  Main.qml  OptionItemButton.qml  SubscriptionStatus.qml  SubscriptionWindow.qml  SwitchButton.qml  TextButton.qml  ThemeChooserButton.qml  TodoColumnDelegate.qml  TodoTaskDelegate.qml  UpdaterDialog.qml  Utilities.js  ViewChooserButton.qml  kanbanMain.qml
src/styles/: main-window.css
src/styles/components/: custom-scrollbar.css
tests/: CMakeLists.txt  main.cpp  tests.pro  tst_mainwindow.cpp  tst_mainwindow.h  tst_notedata.cpp  tst_notedata.h  tst_notemodel.cpp  tst_notemodel.h  tst_noteview.cpp  tst_noteview.h
